--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
         "babel-preset-stage-0": "latest",
         "css-loader": "latest",
         "d3": "^4.7.4",
+        "eslint": "^3.18.0",
+        "eslint-config-recommended": "^1.5.0",
+        "eslint-plugin-promise": "^3.5.0",
+        "eslint-plugin-standard": "^2.1.1",
         "html-webpack-plugin": "^2.28.0",
         "lodash": "latest",
         "react": "latest",
@@ -36,6 +40,7 @@
     "devDependencies": {},
     "scripts": {
         "dev": "./node_modules/.bin/webpack-dev-server -d --content-base src --inline --hot --port 3002",
+        "lint": "node_modules/eslint/bin/eslint.js --config=./.eslintrc.js ./src/js/**/*.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     }
 }
