--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "scripts": {
         "dev": "./node_modules/.bin/webpack-dev-server -d --content-base src --inline --hot --port 3002",
         "docs": "node_modules/documentation/bin/documentation.js build src/**/*.js -f html -o docs && node_modules/documentation/bin/documentation.js build src/**/*.js -f md > DOCUMENTATION.md",
-        "lint": "node_modules/eslint/bin/eslint.js --config=./.eslintrc.js ./src/js/**/*.js",
+        "lint": "node_modules/eslint/bin/eslint.js --config=.eslintrc.js \"src/**/*.js\"",
         "test": "echo \"Error: no test specified\" && exit 1"
     }
 }
