--- a/package.json
+++ b/package.json
@@ -1,41 +1,49 @@
 {
     "name": "react-d3-graph",
     "version": "0.0.0",
-    "description": "React component to build interactive and configurable graphs with d3 effortlessly\"",
-    "main": "index.js",
+    "description": "React component to build interactive and configurable graphs with d3 effortlessly",
     "author": "Daniel Caldas",
     "license": "MIT",
     "dependencies": {
-        "babel-core": "latest",
-        "babel-loader": "latest",
-        "babel-plugin-add-module-exports": "latest",
-        "babel-plugin-react-html-attrs": "latest",
-        "babel-plugin-transform-class-properties": "latest",
-        "babel-plugin-transform-decorators-legacy": "latest",
-        "babel-preset-es2015": "latest",
-        "babel-preset-react": "latest",
-        "babel-preset-stage-0": "latest",
-        "d3": "^4.7.4",
-        "documentation": "^4.0.0-beta.18",
-        "eslint": "^3.18.0",
-        "eslint-config-recommended": "^1.5.0",
-        "eslint-plugin-promise": "^3.5.0",
-        "eslint-plugin-standard": "^2.1.1",
-        "html-webpack-plugin": "^2.28.0",
-        "react": "latest",
-        "react-dom": "latest",
-        "react-router-dom": "^4.0.0",
-        "react-spinkit": "^2.1.1",
-        "redux": "latest",
-        "redux-logger": "latest",
-        "redux-promise": "latest",
-        "redux-promise-middleware": "latest",
-        "redux-thunk": "latest",
-        "style-loader": "^0.14.1",
-        "webpack": "latest",
-        "webpack-dev-server": "latest"
+        "d3": "4.7.4",
+        "react": "15.4.2"
     },
-    "devDependencies": {},
+    "devDependencies": {
+        "babel-core": "6.24.0",
+        "babel-loader": "6.4.1",
+        "babel-plugin-add-module-exports": "0.2.1",
+        "babel-plugin-react-html-attrs": "2.0.0",
+        "babel-plugin-transform-class-properties": "6.22.0",
+        "babel-plugin-transform-decorators-legacy": "1.3.4",
+        "babel-preset-es2015": "6.16.0",
+        "babel-preset-react": "6.16.0",
+        "babel-preset-stage-0": "6.16.0",
+        "documentation": "4.0.0-beta.18",
+        "eslint-config-recommended": "1.5.0",
+        "eslint-plugin-promise": "3.5.0",
+        "eslint-plugin-standard": "2.1.1",
+        "eslint": "3.18.0",
+        "html-webpack-plugin": "2.28.0",
+        "react-dom": "15.4.2",
+        "react-router-dom": "4.0.0",
+        "webpack": "2.3.2",
+        "webpack-dev-server": "2.4.2"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/danielcaldas/react-d3-graph.git"
+    },
+    "keywords": [
+        "d3js",
+        "d3-visualization",
+        "react",
+        "javascript",
+        "graphs",
+        "visualization",
+        "networks",
+        "social-network-analysis",
+        "social-network-graph"
+    ],
     "scripts": {
         "dev": "./node_modules/.bin/webpack-dev-server -d --content-base src --inline --hot --port 3002",
         "docs": "node_modules/documentation/bin/documentation.js build src/**/*.js -f html -o docs && node_modules/documentation/bin/documentation.js build src/**/*.js -f md > DOCUMENTATION.md",
