--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
         "visualization"
     ],
     "scripts": {
-        "dev": "node_modules/.bin/webpack-dev-server -d --content-base src --inline --hot --port 3002",
-        "dist": "webpack -p",
+        "dev": "node_modules/.bin/webpack-dev-server -d --content-base sandbox --inline --hot --port 3002",
+        "dist": "webpack -p --display-modules",
         "docs": "node_modules/documentation/bin/documentation.js build src/**/*.js -f html -o docs && node_modules/documentation/bin/documentation.js build src/**/*.js -f md > DOCUMENTATION.md",
         "lint": "node_modules/eslint/bin/eslint.js --config=.eslintrc.js \"src/**/*.js\"",
         "test": "echo \"Error: no test specified\" && exit 1"
