--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
         "babel-preset-react": "6.16.0",
         "babel-preset-stage-0": "6.16.0",
         "documentation": "4.0.0-beta.18",
+        "eslint": "3.18.0",
         "eslint-config-recommended": "1.5.0",
         "eslint-plugin-promise": "3.5.0",
         "eslint-plugin-standard": "2.1.1",
-        "eslint": "3.18.0",
         "html-webpack-plugin": "2.28.0",
         "react-dom": "15.4.2",
         "react-router-dom": "4.0.0",
@@ -46,7 +46,7 @@
     ],
     "scripts": {
         "dev": "node_modules/.bin/webpack-dev-server -d --content-base sandbox --inline --hot --port 3002",
-        "dist": "webpack -p --display-modules",
+        "dist": "webpack --config webpack.config.prod.js -p --display-modules",
         "docs": "node_modules/documentation/bin/documentation.js build src/**/*.js -f html -o docs && node_modules/documentation/bin/documentation.js build src/**/*.js -f md > DOCUMENTATION.md",
         "lint": "node_modules/eslint/bin/eslint.js --config=.eslintrc.js \"src/**/*.js\"",
         "test": "echo \"Error: no test specified\" && exit 1"
