--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
         "eslint-plugin-promise": "3.5.0",
         "eslint-plugin-standard": "2.1.1",
         "html-webpack-plugin": "2.28.0",
+        "npm-run-all": "4.0.2",
         "react-dom": "15.4.2",
-        "react-jsonschema-form": "^0.46.0",
+        "react-jsonschema-form": "0.46.0",
         "react-router-dom": "4.0.0",
         "webpack": "2.3.2",
         "webpack-dev-server": "2.4.2"
@@ -47,7 +48,9 @@
     ],
     "scripts": {
         "dev": "node_modules/.bin/webpack-dev-server -d --content-base sandbox --inline --hot --port 3002",
-        "dist": "webpack --config webpack.config.dist.js -p --display-modules",
+        "dist": "node_modules/.bin/npm-run-all --parallel dist:*",
+        "dist:rd3g": "webpack --config webpack.config.dist.js -p --display-modules",
+        "dist:sandbox": "webpack --config webpack.config.js -p --display-modules",
         "docs": "node_modules/documentation/bin/documentation.js build src/**/*.js -f html -o docs && node_modules/documentation/bin/documentation.js build src/**/*.js -f md > DOCUMENTATION.md",
         "lint": "node_modules/eslint/bin/eslint.js --config=.eslintrc.js \"src/**/*.js\"",
         "test": "echo \"Error: no test specified\" && exit 1"
