--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "babel-preset-es2015": "6.16.0",
         "babel-preset-react": "6.16.0",
         "babel-preset-stage-0": "6.16.0",
+        "css-loader": "^0.28.0",
         "documentation": "4.0.0-beta.18",
         "eslint": "3.18.0",
         "eslint-config-recommended": "1.5.0",
@@ -28,6 +29,7 @@
         "react-dom": "15.4.2",
         "react-jsonschema-form": "0.46.0",
         "react-router-dom": "4.0.0",
+        "style-loader": "^0.16.1",
         "webpack": "2.3.2",
         "webpack-dev-server": "2.4.2"
     },
