--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
         "babel-preset-es2015": "6.16.0",
         "babel-preset-react": "6.16.0",
         "babel-preset-stage-0": "6.16.0",
+        "css-loader": "^0.28.0",
         "documentation": "4.0.0-beta.18",
+        "eslint": "3.18.0",
         "eslint-config-recommended": "1.5.0",
         "eslint-plugin-promise": "3.5.0",
         "eslint-plugin-standard": "2.1.1",
-        "eslint": "3.18.0",
         "html-webpack-plugin": "2.28.0",
+        "npm-run-all": "4.0.2",
         "react-dom": "15.4.2",
+        "react-jsonschema-form": "0.46.0",
         "react-router-dom": "4.0.0",
+        "style-loader": "^0.16.1",
         "webpack": "2.3.2",
         "webpack-dev-server": "2.4.2"
     },
@@ -45,8 +49,10 @@
         "visualization"
     ],
     "scripts": {
-        "dev": "node_modules/.bin/webpack-dev-server -d --content-base src --inline --hot --port 3002",
-        "dist": "webpack -p",
+        "dev": "node_modules/.bin/webpack-dev-server -d --content-base sandbox --inline --hot --port 3002",
+        "dist": "node_modules/.bin/npm-run-all --parallel dist:*",
+        "dist:rd3g": "webpack --config webpack.config.dist.js -p --display-modules",
+        "dist:sandbox": "webpack --config webpack.config.js -p --display-modules",
         "docs": "node_modules/documentation/bin/documentation.js build src/**/*.js -f html -o docs && node_modules/documentation/bin/documentation.js build src/**/*.js -f md > DOCUMENTATION.md",
         "lint": "node_modules/eslint/bin/eslint.js --config=.eslintrc.js \"src/**/*.js\"",
         "test": "echo \"Error: no test specified\" && exit 1"
