--- a/package.json
+++ b/package.json
@@ -4,34 +4,52 @@
     "description": "React component to build interactive and configurable graphs with d3 effortlessly",
     "author": "Daniel Caldas",
     "license": "MIT",
+    "scripts": {
+        "dev": "node_modules/.bin/webpack-dev-server -d --content-base sandbox --inline --hot --port 3002",
+        "dist": "node_modules/.bin/npm-run-all --parallel dist:*",
+        "dist:rd3g": "webpack --config webpack.config.dist.js -p --display-modules",
+        "dist:sandbox": "webpack --config webpack.config.js -p --display-modules",
+        "docs": "node_modules/documentation/bin/documentation.js build src/**/*.js -f html -o docs && node_modules/documentation/bin/documentation.js build src/**/*.js -f md > DOCUMENTATION.md",
+        "lint": "node_modules/eslint/bin/eslint.js --config=.eslintrc.js \"src/**/*.js\"",
+        "test": "jest --verbose --coverage",
+        "test:clean": "jest --no-cache --updateSnapshot --verbose --coverage",
+        "test:watch": "jest --verbose --watchAll"
+    },
     "dependencies": {
         "d3": "4.7.4",
-        "react": "15.4.2"
+        "react": "^15.5.0"
     },
     "devDependencies": {
         "babel-core": "6.24.0",
+        "babel-jest": "19.0.0",
         "babel-loader": "6.4.1",
         "babel-plugin-add-module-exports": "0.2.1",
         "babel-plugin-react-html-attrs": "2.0.0",
         "babel-plugin-transform-class-properties": "6.22.0",
         "babel-plugin-transform-decorators-legacy": "1.3.4",
-        "babel-preset-es2015": "6.16.0",
-        "babel-preset-react": "6.16.0",
+        "babel-preset-es2015": "6.24.1",
+        "babel-preset-react": "6.24.1",
         "babel-preset-stage-0": "6.16.0",
-        "css-loader": "^0.28.0",
+        "css-loader": "0.28.0",
         "documentation": "4.0.0-beta.18",
         "eslint": "3.18.0",
         "eslint-config-recommended": "1.5.0",
         "eslint-plugin-promise": "3.5.0",
         "eslint-plugin-standard": "2.1.1",
         "html-webpack-plugin": "2.28.0",
+        "jest": "19.0.2",
         "npm-run-all": "4.0.2",
-        "react-dom": "15.4.2",
+        "react-addons-test-utils": "^15.5.0",
+        "react-dom": "^15.5.0",
         "react-jsonschema-form": "0.46.0",
         "react-router-dom": "4.0.0",
-        "style-loader": "^0.16.1",
+        "react-test-renderer": "^15.5.0",
+        "style-loader": "0.16.1",
         "webpack": "2.3.2",
         "webpack-dev-server": "2.4.2"
+    },
+    "engines": {
+        "node": ">=6.9.5"
     },
     "repository": {
         "type": "git",
@@ -47,14 +65,5 @@
         "social-network-analysis",
         "social-network-graph",
         "visualization"
-    ],
-    "scripts": {
-        "dev": "node_modules/.bin/webpack-dev-server -d --content-base sandbox --inline --hot --port 3002",
-        "dist": "node_modules/.bin/npm-run-all --parallel dist:*",
-        "dist:rd3g": "webpack --config webpack.config.dist.js -p --display-modules",
-        "dist:sandbox": "webpack --config webpack.config.js -p --display-modules",
-        "docs": "node_modules/documentation/bin/documentation.js build src/**/*.js -f html -o docs && node_modules/documentation/bin/documentation.js build src/**/*.js -f md > DOCUMENTATION.md",
-        "lint": "node_modules/eslint/bin/eslint.js --config=.eslintrc.js \"src/**/*.js\"",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    }
+    ]
 }
