Add ci step to update sandbox dist. Link to repo on sandbox

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "dev": "node_modules/.bin/webpack-dev-server -d --content-base sandbox --inline --hot --port 3002",
         "dist": "node_modules/.bin/npm-run-all --parallel dist:*",
         "dist:rd3g": "webpack --config webpack.config.dist.js -p --display-modules",
-        "dist:sandbox": "webpack --config webpack.config.js -p --display-modules",
+        "dist:sandbox": "webpack --config webpack.config.js -p",
         "docs": "node_modules/documentation/bin/documentation.js build src/**/*.js -f html -o docs && node_modules/documentation/bin/documentation.js build src/**/*.js -f md > DOCUMENTATION.md",
         "lint": "node_modules/eslint/bin/eslint.js --config=.eslintrc.js \"src/**/*.js\"",
         "test": "jest --verbose --coverage",
