Add docs for graph config :muscle. Fix highlightStrokeColor default value :star:

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "dist:rd3g": "webpack --config webpack.config.dist.js -p --display-modules",
         "dist:sandbox": "webpack --config webpack.config.js -p",
         "docs": "node_modules/documentation/bin/documentation.js build src/**/*.js -f html -o docs && node_modules/documentation/bin/documentation.js build src/**/*.js -f md > DOCUMENTATION.md",
+        "docs:watch": "node_modules/documentation/bin/documentation.js build src/**/*.js -f html -o docs --watch",
         "lint": "node_modules/eslint/bin/eslint.js --config=.eslintrc.js \"src/**/*.js\"",
         "test": "jest --verbose --coverage",
         "test:clean": "jest --no-cache --updateSnapshot --verbose --coverage",
