Remove docs from gitignore. Add .npmignore file

--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
         "dist": "node_modules/.bin/npm-run-all --parallel dist:*",
         "dist:rd3g": "webpack --config webpack.config.dist.js -p --display-modules",
         "dist:sandbox": "webpack --config webpack.config.js -p",
-        "docs": "node_modules/documentation/bin/documentation.js build src/**/*.js -f html -o docs && node_modules/documentation/bin/documentation.js build src/**/*.js -f md > DOCUMENTATION.md",
-        "docs:watch": "node_modules/documentation/bin/documentation.js build src/**/*.js -f html -o docs --watch",
+        "docs": "node_modules/documentation/bin/documentation.js build src/**/*.js -f html -o gen-docs && node_modules/documentation/bin/documentation.js build src/**/*.js -f md > gen-docs/DOCUMENTATION.md",
+        "docs:lint": "node_modules/documentation/bin/documentation.js lint src/**/*.js",
+        "docs:watch": "node_modules/documentation/bin/documentation.js build src/**/*.js -f html -o gen-docs --watch",
         "lint": "node_modules/eslint/bin/eslint.js --config=.eslintrc.js \"src/**/*.js\"",
         "test": "jest --verbose --coverage",
         "test:clean": "jest --no-cache --updateSnapshot --verbose --coverage",
