--- a/.gitignore
+++ b/.gitignore
@@ -64,7 +64,8 @@ typings/
 # End of https://www.gitignore.io/api/node
 
 # PROJECT configurations
-dist/
+dist
+lib
 coverage
 sandbox/rd3g.sandbox.bundle.js.map
 gen-docs
