--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
         "react-test-renderer": "^15.5.0",
         "style-loader": "0.16.1",
         "webpack": "2.3.2",
-        "webpack-dev-server": "2.4.2"
+        "webpack-dev-server": "2.4.2",
+        "webpack-visualizer-plugin": "^0.1.11"
     },
     "engines": {
         "node": ">=6.9.5"
