--- a/package.json
+++ b/package.json
@@ -20,42 +20,42 @@
         "test:watch": "jest --verbose --watchAll"
     },
     "dependencies": {
-        "d3": "4.7.4",
-        "react": "^15.5.0"
+        "d3": "4.10.2",
+        "react": "15.6.1"
     },
     "devDependencies": {
-        "babel-cli": "^6.24.1",
-        "babel-core": "6.24.0",
-        "babel-jest": "19.0.0",
-        "babel-loader": "6.4.1",
+        "babel-cli": "6.26.0",
+        "babel-core": "6.26.0",
+        "babel-jest": "21.0.2",
+        "babel-loader": "7.1.2",
         "babel-plugin-add-module-exports": "0.2.1",
         "babel-plugin-react-html-attrs": "2.0.0",
-        "babel-plugin-transform-class-properties": "6.22.0",
+        "babel-plugin-transform-class-properties": "6.24.1",
         "babel-plugin-transform-decorators-legacy": "1.3.4",
         "babel-preset-es2015": "6.24.1",
         "babel-preset-react": "6.24.1",
-        "babel-preset-stage-0": "6.16.0",
-        "css-loader": "0.28.0",
-        "documentation": "4.0.0-beta.18",
+        "babel-preset-stage-0": "6.24.1",
+        "css-loader": "0.28.7",
+        "documentation": "5.3.2",
         "eslint": "3.18.0",
         "eslint-config-recommended": "1.5.0",
         "eslint-plugin-promise": "3.5.0",
         "eslint-plugin-standard": "2.1.1",
-        "html-webpack-plugin": "2.28.0",
-        "jest": "19.0.2",
-        "npm-run-all": "4.0.2",
-        "react-addons-test-utils": "^15.5.0",
-        "react-dom": "^15.5.0",
-        "react-jsonschema-form": "0.46.0",
-        "react-router-dom": "4.0.0",
-        "react-test-renderer": "^15.5.0",
-        "style-loader": "0.16.1",
-        "webpack": "2.3.2",
-        "webpack-dev-server": "2.4.2",
-        "webpack-visualizer-plugin": "^0.1.11"
+        "html-webpack-plugin": "2.30.1",
+        "jest": "21.1.0",
+        "npm-run-all": "4.1.1",
+        "react-addons-test-utils": "15.6.0",
+        "react-dom": "15.6.1",
+        "react-jsonschema-form": "0.50.1",
+        "react-router-dom": "4.2.2",
+        "react-test-renderer": "15.6.1",
+        "style-loader": "0.18.2",
+        "webpack": "3.6.0",
+        "webpack-dev-server": "2.8.2",
+        "webpack-visualizer-plugin": "0.1.11"
     },
     "engines": {
-        "node": ">=6.9.5"
+        "node": "6.9.x"
     },
     "main": "lib/index.js",
     "repository": {
