Fix/tests coverage (#44)
* Add one more test case to utils/isDeepEqual

* Improve utils/merge and add new test case

* Add test to utils/throwErr

* Change tests structure. Add components folders

* Lowercase naming in test files

* Update jest

* Remove plus sign from downloads badge

* Improve createForceSimulation docs

* Add spec for graph helper createForceSimulation

* Organize code in graph helper. Fix lint helper test file

* Improve graph validation err messages

* Graph helper tests for when no valid graph data is provided

* Add tests for initializeGraphState

* initializeGraphState tests

* Improve util test descriptions

* Update graph.helper tests

* Move snapshot tests into separate test folder

* Move _graphForcesConfig private func to top of component

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "lint:test": "node_modules/eslint/bin/eslint.js --config=.eslintrc.test.config.js \"test/**/*.test.js\"",
         "test": "jest --verbose --coverage",
         "test:clean": "jest --no-cache --updateSnapshot --verbose --coverage",
-        "test:watch": "jest --verbose --watchAll"
+        "test:watch": "jest --verbose --coverage --watchAll"
     },
     "dependencies": {
         "d3": "4.10.2",
@@ -45,7 +45,7 @@
         "eslint-plugin-promise": "3.5.0",
         "eslint-plugin-standard": "2.1.1",
         "html-webpack-plugin": "2.30.1",
-        "jest": "21.1.0",
+        "jest": "21.3.0-beta.8",
         "npm-run-all": "4.1.1",
         "react-addons-test-utils": "15.6.0",
         "react-dom": "15.6.1",
