--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "eslint-config-recommended": "1.5.0",
         "eslint-plugin-jest": "21.2.0",
         "eslint-plugin-promise": "3.5.0",
+        "eslint-plugin-react": "7.5.1",
         "eslint-plugin-standard": "2.1.1",
         "html-webpack-plugin": "2.30.1",
         "jest": "21.3.0-beta.8",
