--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "lint:test": "node_modules/eslint/bin/eslint.js --config=.eslintrc.test.config.js \"test/**/*.test.js\"",
         "test": "jest --verbose --coverage",
         "test:clean": "jest --no-cache --updateSnapshot --verbose --coverage",
-        "test:watch": "jest --verbose --coverage --watchAll"
+        "test:watch": "jest --verbose --coverage --watchAll",
+        "functional": "cypress open"
     },
     "dependencies": {
         "d3": "4.10.2",
@@ -38,6 +39,7 @@
         "babel-preset-react": "6.24.1",
         "babel-preset-stage-0": "6.24.1",
         "css-loader": "0.28.7",
+        "cypress": "1.4.1",
         "documentation": "5.3.2",
         "eslint": "3.18.0",
         "eslint-config-recommended": "1.5.0",
