--- a/package.json
+++ b/package.json
@@ -7,21 +7,23 @@
     "scripts": {
         "check": "npm run docs:lint && npm run lint && npm run test",
         "dev": "node_modules/.bin/webpack-dev-server -d --content-base sandbox --inline --hot --port 3002",
-        "dist": "npm run check && node_modules/.bin/npm-run-all --parallel dist:*",
         "dist:rd3g": "rm -rf dist/ && webpack --config webpack.config.dist.js -p --display-modules",
         "dist:sandbox": "webpack --config webpack.config.js -p",
         "dist:transpile": "./node_modules/babel-cli/bin/babel.js -d lib src",
-        "docs": "npm run docs:lint && node_modules/documentation/bin/documentation.js build src/**/*.js -f html -o gen-docs && node_modules/documentation/bin/documentation.js build src/**/*.js -f md > gen-docs/DOCUMENTATION.md",
+        "dist": "npm run check && node_modules/.bin/npm-run-all --parallel dist:*",
         "docs:lint": "node_modules/documentation/bin/documentation.js lint src/**/*.js",
         "docs:watch": "node_modules/documentation/bin/documentation.js build src/**/*.js -f html -o gen-docs --watch",
-        "lint": "npm run lint:src && npm run lint:test",
+        "docs": "npm run docs:lint && node_modules/documentation/bin/documentation.js build src/**/*.js -f html -o gen-docs && node_modules/documentation/bin/documentation.js build src/**/*.js -f md > gen-docs/DOCUMENTATION.md",
+        "functional:local": "export CYPRESS_SANDBOX_URL=http://localhost:3002/ && cypress open",
+        "functional:remote": "export CYPRESS_SANDBOX_URL=https://danielcaldas.github.io/react-d3-graph/sandbox/index.html && cypress open",
+        "functional:run": "export CYPRESS_SANDBOX_URL=https://danielcaldas.github.io/react-d3-graph/sandbox/index.html && cypress run",
         "lint:src": "node_modules/eslint/bin/eslint.js --config=.eslintrc.js \"src/**/*.js*\"",
         "lint:test": "node_modules/eslint/bin/eslint.js --config=.eslintrc.test.config.js \"test/**/*.test.js\"",
-        "test": "jest --verbose --coverage",
+        "lint": "npm run lint:src && npm run lint:test",
+        "start": "http-server ./sandbox/ -p 8888 -c-1",
         "test:clean": "jest --no-cache --updateSnapshot --verbose --coverage",
         "test:watch": "jest --verbose --coverage --watchAll",
-        "functional:local": "export CYPRESS_SANDBOX_URL=http://localhost:3002/ && cypress open",
-        "functional:remote": "export CYPRESS_SANDBOX_URL=https://danielcaldas.github.io/react-d3-graph/sandbox/index.html && cypress open"
+        "test": "jest --verbose --coverage"
     },
     "dependencies": {
         "d3": "4.10.2",
@@ -52,6 +54,7 @@
         "eslint-plugin-react": "7.5.1",
         "eslint-plugin-standard": "2.1.1",
         "html-webpack-plugin": "2.30.1",
+        "http-server": "0.11.1",
         "jest": "21.3.0-beta.8",
         "npm-run-all": "4.1.1",
         "react-addons-test-utils": "15.6.0",
