--- a/.npmignore
+++ b/.npmignore
@@ -1,16 +1,22 @@
-.babelrc
-.DS_Store
-.eslintrc.js
 .git
 .gitignore
-.travis.yml
+.github
+.vscode
 coverage
+cypress
 docs
 gen-docs
-package.json
 sandbox
-src
 test
+.babelrc
+.editorconfig
+.eslintrc.js
+.eslintrc.test.config.js
+.travis.yml
+cypress.json
+package-lock.json
+RELEASE_PROCESS
 webpack.config.dist.js
 webpack.config.js
 yarn.lock
+.DS_Store
