--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
     - "8.9.0"
 install:
-    - yarn install
+    - npm install
 before_script:
     - npm start -- --silent &
 script:
