--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
         "babel-preset-react": "6.24.1",
         "babel-preset-stage-0": "6.24.1",
         "css-loader": "0.28.7",
-        "cypress": "1.4.1",
+        "cypress": "2.0.1",
         "documentation": "5.3.2",
         "eslint": "3.18.0",
         "eslint-config-recommended": "1.5.0",
@@ -59,6 +59,7 @@
         "npm-run-all": "4.1.1",
         "react-addons-test-utils": "15.6.0",
         "react-dom": "15.6.1",
+        "react-editable-json-tree": "2.1.0",
         "react-jsonschema-form": "0.50.1",
         "react-router-dom": "4.2.2",
         "react-test-renderer": "15.6.1",
