--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "http-server": "0.11.1",
         "jest": "21.3.0-beta.8",
         "npm-run-all": "4.1.1",
+        "prettier": "1.11.1",
         "react-addons-test-utils": "15.6.0",
         "react-dom": "15.6.1",
         "react-editable-json-tree": "2.1.0",
