--- a/package.json
+++ b/package.json
@@ -74,8 +74,9 @@
         "react-router-dom": "4.2.2",
         "react-test-renderer": "15.6.1",
         "style-loader": "0.18.2",
-        "webpack": "3.6.0",
-        "webpack-dev-server": "2.8.2",
+        "webpack": "4.2.0",
+        "webpack-cli": "2.0.12",
+        "webpack-dev-server": "3.1.1",
         "webpack-visualizer-plugin": "0.1.11"
     },
     "engines": {
