--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
         "@cypress/webpack-preprocessor": "1.1.3",
         "babel-cli": "6.26.0",
         "babel-core": "6.26.0",
-        "babel-jest": "21.0.2",
+        "babel-jest": "22.4.3",
         "babel-loader": "7.1.2",
         "babel-plugin-add-module-exports": "0.2.1",
         "babel-plugin-react-html-attrs": "2.0.0",
@@ -63,7 +63,7 @@
         "html-webpack-plugin": "2.30.1",
         "http-server": "0.11.1",
         "husky": "0.14.3",
-        "jest": "21.3.0-beta.8",
+        "jest": "22.4.3",
         "lint-staged": "7.0.0",
         "npm-run-all": "4.1.1",
         "prettier": "1.11.1",
