--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "test": "jest --verbose --coverage --config jest.config.js"
     },
     "lint-staged": {
-        "*.{js,json,css,md}": [
+        "*.{js,jsx,json,css,md}": [
             "prettier --write",
             "git add"
         ]
@@ -40,7 +40,7 @@
         "@cypress/webpack-preprocessor": "1.1.3",
         "babel-cli": "6.26.0",
         "babel-core": "6.26.0",
-        "babel-jest": "21.0.2",
+        "babel-jest": "22.4.3",
         "babel-loader": "7.1.2",
         "babel-plugin-add-module-exports": "0.2.1",
         "babel-plugin-react-html-attrs": "2.0.0",
@@ -52,18 +52,18 @@
         "babel-preset-react": "6.24.1",
         "babel-preset-stage-0": "6.24.1",
         "css-loader": "0.28.7",
-        "cypress": "2.0.1",
+        "cypress": "2.1.0",
         "documentation": "5.3.2",
-        "eslint": "3.18.0",
-        "eslint-config-recommended": "1.5.0",
-        "eslint-plugin-jest": "21.2.0",
-        "eslint-plugin-promise": "3.5.0",
-        "eslint-plugin-react": "7.5.1",
-        "eslint-plugin-standard": "2.1.1",
+        "eslint": "4.19.1",
+        "eslint-config-recommended": "2.0.0",
+        "eslint-plugin-jest": "21.15.0",
+        "eslint-plugin-promise": "3.7.0",
+        "eslint-plugin-react": "7.7.0",
+        "eslint-plugin-standard": "3.0.1",
         "html-webpack-plugin": "2.30.1",
         "http-server": "0.11.1",
         "husky": "0.14.3",
-        "jest": "21.3.0-beta.8",
+        "jest": "22.4.3",
         "lint-staged": "7.0.0",
         "npm-run-all": "4.1.1",
         "prettier": "1.11.1",
@@ -71,7 +71,6 @@
         "react-dom": "15.6.1",
         "react-editable-json-tree": "2.1.0",
         "react-jsonschema-form": "0.50.1",
-        "react-router-dom": "4.2.2",
         "react-test-renderer": "15.6.1",
         "style-loader": "0.18.2",
         "webpack": "4.2.0",
