--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "scripts": {
         "check": "npm run docs:lint && npm run lint && npm run test && npm run functional",
-        "dev": "node_modules/.bin/webpack-dev-server -d --content-base sandbox --inline --hot --port 3002",
+        "dev": "webpack-dev-server -d --content-base sandbox --inline --hot --port 3002",
         "dist:rd3g": "rm -rf dist/ && webpack --config webpack.config.dist.js -p --display-modules --optimize-minimize",
         "dist:sandbox": "webpack --config webpack.config.js -p",
         "dist:transpile": "./node_modules/babel-cli/bin/babel.js -d lib src",
@@ -75,7 +75,7 @@
         "style-loader": "0.18.2",
         "webpack": "4.2.0",
         "webpack-cli": "2.0.12",
-        "webpack-dev-server": "3.1.1",
+        "webpack-dev-server": "3.1.3",
         "webpack-visualizer-plugin": "0.1.11"
     },
     "engines": {
