--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
         ]
     },
     "dependencies": {
-        "d3": "4.10.2",
-        "react": "15.6.1"
+        "d3": "^4.10.2",
+        "react": "^15.6.1"
     },
     "devDependencies": {
         "@cypress/webpack-preprocessor": "1.1.3",
