--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
             "git add"
         ]
     },
-    "dependencies": {
+    "peerDependencies": {
         "d3": "^4.10.2",
         "react": "^15.6.1"
     },
@@ -54,6 +54,7 @@
         "css-loader": "0.28.7",
         "cypress": "2.1.0",
         "documentation": "5.3.2",
+        "d3": "^4.10.2",
         "eslint": "4.19.1",
         "eslint-config-recommended": "2.0.0",
         "eslint-plugin-jest": "21.15.0",
@@ -67,6 +68,7 @@
         "lint-staged": "7.0.0",
         "npm-run-all": "4.1.1",
         "prettier": "1.11.1",
+        "react": "^15.6.1",
         "react-addons-test-utils": "15.6.0",
         "react-dom": "15.6.1",
         "react-editable-json-tree": "2.1.0",
