Fix/link highlight id number (#74)
* Organize sandbox datasets under data folder. Add small dataset

* Bootstrap different config on sandbox via querystring

* Add different config to small dataset

* Add comment on Sandbox about queryParam scenario loading manipulation

* Fix graph and node e2e

* Add link.e2e

* Add e2e test for node.labelProperty

* Link props builder always receive source, target and highlightedNode as string

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "docs:lint": "node_modules/documentation/bin/documentation.js lint src/**/*.js",
         "docs:watch": "node_modules/documentation/bin/documentation.js build src/**/*.js -f html -o gen-docs --watch",
         "docs": "npm run docs:lint && node_modules/documentation/bin/documentation.js build src/**/*.js -f html -o gen-docs && node_modules/documentation/bin/documentation.js build src/**/*.js -f md > gen-docs/DOCUMENTATION.md",
-        "functional:local": "export CYPRESS_SANDBOX_URL=http://localhost:3002/ && cypress open",
+        "functional:local": "export CYPRESS_SANDBOX_URL=http://localhost:3002 && cypress open",
         "functional:remote": "export CYPRESS_SANDBOX_URL=https://danielcaldas.github.io/react-d3-graph/sandbox/index.html && cypress open",
         "functional": "export CYPRESS_SANDBOX_URL=http://127.0.0.1:8888 && cypress run",
         "lint:src": "node_modules/eslint/bin/eslint.js --config=.eslintrc.js \"src/**/*.js*\"",
@@ -53,8 +53,8 @@
         "babel-preset-stage-0": "6.24.1",
         "css-loader": "0.28.7",
         "cypress": "2.1.0",
-        "documentation": "5.3.2",
         "d3": "^4.10.2",
+        "documentation": "5.3.2",
         "eslint": "4.19.1",
         "eslint-config-recommended": "2.0.0",
         "eslint-plugin-jest": "21.15.0",
@@ -68,6 +68,7 @@
         "lint-staged": "7.0.0",
         "npm-run-all": "4.1.1",
         "prettier": "1.11.1",
+        "query-string": "6.1.0",
         "react": "^15.6.1",
         "react-addons-test-utils": "15.6.0",
         "react-dom": "15.6.1",
