--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "functional": "export CYPRESS_SANDBOX_URL=http://127.0.0.1:8888 && cypress run",
         "lint:src": "node_modules/eslint/bin/eslint.js --config=.eslintrc.js \"src/**/*.js*\"",
         "lint:test": "node_modules/eslint/bin/eslint.js --config=.eslintrc.test.config.js \"test/**/*.test.js\"",
-        "lint": "npm run lint:src && npm run lint:test",
+        "lint": "npm run lint:src && npm run lint:test && npm run docs:lint",
         "precommit": "lint-staged",
         "start": "http-server ./sandbox/ -p 8888 -c-1",
         "test:clean": "jest --no-cache --updateSnapshot --verbose --coverage --config jest.config.js",
@@ -40,7 +40,7 @@
         "@cypress/webpack-preprocessor": "1.1.3",
         "babel-cli": "6.26.0",
         "babel-core": "6.26.0",
-        "babel-jest": "22.4.3",
+        "babel-jest": "23.4.0",
         "babel-loader": "7.1.2",
         "babel-plugin-add-module-exports": "0.2.1",
         "babel-plugin-react-html-attrs": "2.0.0",
@@ -54,17 +54,17 @@
         "css-loader": "0.28.7",
         "cypress": "2.1.0",
         "d3": "^4.10.2",
-        "documentation": "5.3.2",
+        "documentation": "6.2.0",
         "eslint": "4.19.1",
         "eslint-config-recommended": "2.0.0",
-        "eslint-plugin-jest": "21.15.0",
+        "eslint-plugin-jest": "21.18.0",
         "eslint-plugin-promise": "3.7.0",
         "eslint-plugin-react": "7.7.0",
         "eslint-plugin-standard": "3.0.1",
         "html-webpack-plugin": "2.30.1",
         "http-server": "0.11.1",
         "husky": "0.14.3",
-        "jest": "22.4.3",
+        "jest": "23.4.1",
         "lint-staged": "7.0.0",
         "npm-run-all": "4.1.1",
         "prettier": "1.11.1",
