--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "start": "http-server ./sandbox/ -p 8888 -c-1",
         "test:clean": "jest --no-cache --updateSnapshot --verbose --coverage --config jest.config.js",
         "test:watch": "jest --verbose --coverage --watchAll --config jest.config.js",
-        "test": "jest --verbose --coverage --config jest.config.js"
+        "test": "jest --verbose --coverage --config jest.config.js",
+        "sandbox": "npm run dist:sandbox && npm run start"
     },
     "lint-staged": {
         "*.{js,jsx,json,css,md}": [
