--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "eslint-config-recommended": "2.0.0",
         "eslint-plugin-cypress": "2.0.1",
         "eslint-plugin-jest": "21.18.0",
+        "eslint-plugin-prettier": "^3.0.0",
         "eslint-plugin-promise": "3.7.0",
         "eslint-plugin-react": "7.10.0",
         "eslint-plugin-standard": "3.0.1",
@@ -80,6 +81,7 @@
         "react-jsonschema-form": "1.0.4",
         "react-test-renderer": "16.4.1",
         "style-loader": "0.18.2",
+        "typescript": "^3.2.2",
         "webpack": "4.2.0",
         "webpack-cli": "2.0.12",
         "webpack-dev-server": "3.1.3",
