Feature/linting prettier improvements (#156)
* Update and configure prettier. Add .npmrc with registry

* Trailing comma. Double quotes. Align prettier and eslint

* Format test folder

* Remove some globals in cypress folder. Some minor adjustments in eslint rules

* Some renaming build -> render

* Methods reorganizing in Graph.jsx file

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "functional:remote": "export CYPRESS_SANDBOX_URL=https://danielcaldas.github.io/react-d3-graph/sandbox/index.html && cypress open",
         "functional": "export CYPRESS_SANDBOX_URL=http://127.0.0.1:8888 && cypress run",
         "lint:src": "node_modules/eslint/bin/eslint.js --config=.eslintrc.js \"src/**/*.js*\"",
-        "lint:test": "node_modules/eslint/bin/eslint.js --config=.eslintrc.test.config.js \"test/**/*.test.js\"",
+        "lint:test": "node_modules/eslint/bin/eslint.js --config=.eslintrc.test.config.js \"test/**/*.spec.js\"",
         "lint": "npm run lint:src && npm run lint:test && npm run docs:lint",
         "precommit": "lint-staged",
         "start": "http-server ./sandbox/ -p 8888 -c-1",
@@ -62,6 +62,7 @@
         "eslint-config-recommended": "2.0.0",
         "eslint-plugin-cypress": "2.0.1",
         "eslint-plugin-jest": "21.18.0",
+        "eslint-plugin-prettier": "^3.0.0",
         "eslint-plugin-promise": "3.7.0",
         "eslint-plugin-react": "7.10.0",
         "eslint-plugin-standard": "3.0.1",
@@ -71,7 +72,7 @@
         "jest": "23.4.1",
         "lint-staged": "7.0.0",
         "npm-run-all": "4.1.1",
-        "prettier": "1.11.1",
+        "prettier": "1.15.3",
         "query-string": "6.1.0",
         "react": "^16.4.1",
         "react-addons-test-utils": "15.6.2",
@@ -80,6 +81,7 @@
         "react-jsonschema-form": "1.0.4",
         "react-test-renderer": "16.4.1",
         "style-loader": "0.18.2",
+        "typescript": "^3.2.2",
         "webpack": "4.2.0",
         "webpack-cli": "2.0.12",
         "webpack-dev-server": "3.1.3",
