--- a/package.json
+++ b/package.json
@@ -47,14 +47,12 @@
         "babel-plugin-add-module-exports": "0.2.1",
         "babel-plugin-react-html-attrs": "2.0.0",
         "babel-plugin-transform-class-properties": "6.24.1",
-        "babel-plugin-transform-decorators-legacy": "1.3.4",
         "babel-polyfill": "6.26.0",
         "babel-preset-es2015": "6.24.1",
-        "babel-preset-es2017": "6.24.1",
         "babel-preset-react": "6.24.1",
         "babel-preset-stage-2": "6.24.1",
         "cross-env": "^5.2.0",
-        "css-loader": "0.28.7",
+        "css-loader": "2.0.2",
         "cypress": "2.1.0",
         "d3": "^5.5.0",
         "documentation": "6.2.0",
@@ -84,8 +82,8 @@
         "typescript": "^3.2.2",
         "webpack": "4.28.1",
         "webpack-bundle-analyzer": "^3.0.3",
-        "webpack-cli": "^2.0.12",
-        "webpack-dev-server": "3.1.11",
+        "webpack-cli": "2.0.12",
+        "webpack-dev-server": "3.1.3",
         "webpack-visualizer-plugin": "0.1.11"
     },
     "engines": {
