Revert "Add project path to cypress binary in node_modules"
This reverts commit ceb674e556fcb0baa6046fda0472e2c9d13f9eea.

--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
         "docs:lint": "node_modules/documentation/bin/documentation.js lint src/**/*.js",
         "docs:watch": "node_modules/documentation/bin/documentation.js --config documentation.yml build src/**/*.js -f html -o gen-docs --watch",
         "docs": "npm run docs:lint && node_modules/documentation/bin/documentation.js --config documentation.yml build src/**/*.js -f html -o gen-docs && node_modules/documentation/bin/documentation.js build src/**/*.js -f md > gen-docs/DOCUMENTATION.md",
-        "functional:local": "export CYPRESS_SANDBOX_URL=http://localhost:3002 && ./node_modules/.bin/cypress open",
-        "functional:remote": "export CYPRESS_SANDBOX_URL=https://danielcaldas.github.io/react-d3-graph/sandbox/index.html && ./node_modules/.bin/cypress open",
-        "functional": "export CYPRESS_SANDBOX_URL=http://127.0.0.1:8888 && ./node_modules/.bin/cypress run",
+        "functional:local": "export CYPRESS_SANDBOX_URL=http://localhost:3002 && cypress open",
+        "functional:remote": "export CYPRESS_SANDBOX_URL=https://danielcaldas.github.io/react-d3-graph/sandbox/index.html && cypress open",
+        "functional": "export CYPRESS_SANDBOX_URL=http://127.0.0.1:8888 && cypress run",
         "lint:fix": "node_modules/eslint/bin/eslint.js --config=.eslintrc.js --fix \"src/**/*.js*\" \"sandbox/**/*.js*\"",
         "lint:src": "node_modules/eslint/bin/eslint.js --config=.eslintrc.js \"src/**/*.js*\" \"sandbox/**/*.js*\"",
         "lint:test": "node_modules/eslint/bin/eslint.js --config=.eslintrc.test.config.js \"test/**/*.spec.js\"",
